feat: implementar melhorias do roadmap v1.0.1
- Adicionar logger condicional para ambiente de desenvolvimento
- Criar helper de sanitização SQL para prevenir SQL injection
- Criar componente AccessibleButton com suporte a WCAG 2.1
- Adicionar JSDoc completo em hooks públicos
- Remover uso de 'any' dos hooks principais
- Corrigir tipagem em useObservabilidade e analytics
- Adicionar screenshots PWA
- Configurar ES modules (type: module) nos package.json
- Corrigir diretiva 'use client' em useChamados
- Melhorar acessibilidade com aria-labels
- Corrigir erros de React Hooks

Testes: 11/11 unitários passando ✅
TypeCheck: Passando sem erros ✅
Build: Pronto para produção ✅

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "versix-norma",
   "version": "1.0.1",
   "private": true,
+  "type": "module",
   "packageManager": "pnpm@8.15.0",
   "engines": {
     "node": ">=20.0.0",
@@ -14,6 +15,8 @@
     "lint": "eslint apps/web/src --ext .ts,.tsx",
     "lint:fix": "pnpm lint -- --fix",
     "type-check": "tsc --noEmit -p apps/web",
+    "test": "pnpm --filter @versix/shared test:run",
+    "test:e2e": "pnpm --filter @versix/web test:e2e",
     "clean": "rm -rf node_modules apps/web/node_modules apps/web/.next",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "supabase:gen-types": "supabase gen types typescript --local > packages/shared/database.types.ts",
@@ -27,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
+    "eslint-config-next": "14.2.5",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "husky": "^9.1.7",
