fix(security): corrigir vulnerabilidades críticas de segurança
🔴 CORREÇÕES CRÍTICAS (P0):
- Remover DSN real do Sentry em .env.example
- Adicionar flag Secure aos cookies de sessão
- Remover fallback localStorage vulnerável a XSS
- Criar middleware.ts para proteção de rotas autenticadas

🟡 CORREÇÕES MODERADAS (P1):
- Adicionar validação SSRF em useOfflineSync com whitelist de URLs
- Corrigir import não padrão em useFinanceiro.ts

🟢 MELHORIAS (P2):
- Marcar useFinancial.ts como deprecated
- Documentar migração para useFinanceiro.ts

BREAKING CHANGES:
- Cookies agora requerem HTTPS (flag Secure)
- localStorage não é mais usado para condominio_atual

--- a/.env.example
+++ b/.env.example
@@ -71,8 +71,8 @@ NEXT_PUBLIC_APP_ENV=development
 # VERCEL_PROJECT_ID=
 
 # ===== SENTRY (OPCIONAL - Observabilidade) =====
-SENTRY_DSN=https://a26d79f15679fd77106bf3c945db133d@o4510449042325504.ingest.us.sentry.io/4510613184905216
-NEXT_PUBLIC_SENTRY_DSN=https://a26d79f15679fd77106bf3c945db133d@o4510449042325504.ingest.us.sentry.io/4510613184905216
+SENTRY_DSN=https://your_dsn_here@sentry.io/project_id
+NEXT_PUBLIC_SENTRY_DSN=https://your_dsn_here@sentry.io/project_id
 SENTRY_AUTH_TOKEN=
 
 # ====== FEATURE FLAGS ======
